Bug 1029723 - Left Align Webmaker logo with Nav links

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -4,6 +4,11 @@
 
 .navbar {
   font-weight: 300;
+  .container {
+    .navbar-collapse {
+      padding-left: 0;
+    }
+  }
 }
 
 // This is to make the font awesome bars work with the toggle
